# Jsonrs

./: mix.exs
native/jsonrs/: Cargo.toml
native/jsonrs/.cargo/: config
