[package]
name = "jsonrs"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "jsonrs"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.22.0-rc.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
serde_rustler = { git = "https://github.com/vanvoljg/serde_rustler", branch = "refactor/target_raspberry_pi0" }
serde-transcode = "1.1"
lazy_static = "1.0"
